# mesatee-core-standalone

./: .travis.yml  CMakeLists.txt  README.md  apps_zh.md
cmake/: MesaTEEGenVars.cmake
cmake/scripts/: cc_wrapper.sh  prep.sh  rustc_wrapper.sh  sgx_link_sign.sh
cmake/tomls/: Cargo.sgx_trusted_lib.toml  Cargo.sgx_untrusted_app.toml  Cargo.unix_app.toml
docker/: Dockerfile  README.md  SGX2.9.1升级.md  ias  start.sh
docs/: SGX2.9.1 update instructions.md  Ship mesatee-core-standalone on K8S.md  Time to ship mesate-core-standalone on K8S.md
example/kms/proto/: Cargo.toml
example/kms/sgx_app/: Cargo.toml
example/kms/sgx_app/src/: .main.rs.swp
example/kms/sgx_trusted_lib/: Cargo.toml
example/kms/sgx_trusted_lib/src/: sgx.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/kmscli/: Cargo.toml
examples/kmscli/src/: main.rs
examples/quickstart/src/: main.rs
mesatee_core/: Cargo.toml
mesatee_core/src/: error.rs  lib.rs
mesatee_core/src/config/: mod.rs
mesatee_core/src/rpc/: sendrecv.rs
mesatee_core/src/rpc/sgx/: client.rs  ra.rs  server.rs
mesatee_sdk/: Cargo.toml
mesatee_sdk/c_sdk/: Cargo.toml
mesatee_sdk/c_sdk/include/mesatee/: mesatee.h
mesatee_sdk/c_sdk/src/: context.rs
mesatee_sdk/src/: lib.rs
mesatee_services/fns/: sgx_trusted_lib.tgz
mesatee_services/fns/client/src/: fns_client.rs
mesatee_services/fns/sgx_app/src/: main.rs
mesatee_services/fns/sgx_trusted_lib/: Cargo.toml  build.rs
mesatee_services/fns/sgx_trusted_lib/src/: fns.rs  global.rs  lib.rs  worker.rs
mesatee_services/fns/sgx_trusted_lib/src/sgx/: mod.rs
mesatee_services/fns/sgx_trusted_lib/src/trusted_worker/: auth.rs  ciphertext_helper.proto  ciphertext_helper.rs  crypto_helper.rs  demo_func.rs  mod.rs  testgolib.rs  xchain_private_ledger.rs
mesatee_services/kms/client/: Cargo.toml
mesatee_services/kms/client/src/: kms_client.rs  lib.rs
mesatee_services/kms/proto/: Cargo.toml
mesatee_services/kms/proto/src/: kms.proto  task.rs
mesatee_services/kms/sgx_app/: Cargo.toml
mesatee_services/kms/sgx_app/src/: main.rs
mesatee_services/kms/sgx_trusted_lib/: Cargo.toml
mesatee_services/kms/sgx_trusted_lib/src/: kms.rs  lib.rs  sgx.rs
mesatee_services/proto_gen/: Cargo.toml
teaclave_attestation/: Cargo.toml
teaclave_attestation/src/: lib.rs  report.rs  verifier.rs
teaclave_binder/: Cargo.toml
teaclave_binder/src/: ocall.rs
teaclave_config/: Cargo.toml  runtime.config.toml
teaclave_config/src/: lib.rs
teaclave_utils/: Cargo.toml
teaclave_utils/src/: lib.rs
tests/: README.md
tests/unit_test/sgx_app/: Cargo.toml
tests/unit_test/sgx_app/src/: main.rs
tests/unit_test/sgx_trusted_lib/: Cargo.toml
tests/unit_test/sgx_trusted_lib/src/: sgx.rs
