[package]
name = "mesatee_core"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Core of MesaTEE, including IPC/RPC/Error-handling/Database/etc. -- everything you need to develop a TEE services and clients"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "mesatee_core"
path = "src/lib.rs"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse", "ipc", "teaclave_utils/mesalock_sgx", "teaclave_attestation/mesalock_sgx"]
ipc = []

[dependencies]
cfg-if       = { version = "0.1.9" }
env_logger   = { git = "https://github.com/mesalock-linux/env_logger-sgx", version = "0.7.1" }
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
log          = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.6" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx-client-cert-verifier-patch", features = ["dangerous_configuration"] }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx", version = "1.0.92" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx", version = "1.0.92" }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx", version = "1.0.39" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx", version = "0.4.6" }
ring         = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx", version = "0.10.1" }
yasna        = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint   = { git = "https://github.com/mesalock-linux/num-bigint-sgx", version = "0.2.2" }
bit-vec      = { version = "0.6.1", default-features = false }
httparse     = { version = "1.3.2", default-features = false }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
net2         = { git = "https://github.com/mesalock-linux/net2-rs-sgx", version = "0.2.33" }
toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx", version = "0.5.3" }

sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", features = ["net", "backtrace"], optional = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0" }
sgx_urts  = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", optional = true }
sgx_rand  = {   git = "https://github.com/apache/teaclave-sgx-sdk",version = "1.1.0", optional = true }
sgx_tse   = {   git = "https://github.com/apache/teaclave-sgx-sdk",version = "1.1.0", optional = true }

teaclave_utils = { path = "../teaclave_utils" }
ipc_attribute = { path = "./ipc_attribute" }
teaclave_attestation = { path = "../teaclave_attestation" }
