[package]
name = "mesatee_sdk"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Client SDK, applications can utilize it to invoke MesaTEE services."
license = "Apache-2.0"
edition = "2018"

[dependencies]
fns_client           = { path = "../mesatee_services/fns/client" }
mesatee_core         = { path = "../mesatee_core" }
teaclave_utils       = { path = "../teaclave_utils" }
uuid                 = { version = "0.7.4", features = ["v4"] }
