[package]
name = "teaclave_attestation"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Teaclave Attestation"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_attestation"
path = "src/lib.rs"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse"]

[dependencies]
anyhow       = { git = "https://github.com/mesalock-linux/anyhow-sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx"}
bit-vec      = { version = "0.6.1", default-features = false }
cfg-if       = { version = "0.1.9" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx" }
httparse     = { version = "1.3.2", default-features = false }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }
num-bigint   = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx-client-cert-verifier-patch", features = ["dangerous_configuration"] }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
thiserror    = { git = "https://github.com/mesalock-linux/thiserror-sgx" }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna        = { git = "https://github.com/mesalock-linux/yasna.rs-sgx" features = ["bit-vec", "num-bigint", "chrono"] }

sgx_rand    = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", optional = true }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", optional = true }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", optional = true }
sgx_tstd    = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", features = ["net", "backtrace"], optional = true }
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0" }

serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }


teaclave_utils  = { path = "../teaclave_utils" }
