[package]
name = "teaclave_config"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Build and runtime configurations."
license = "Apache-2.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
lazy_static = { version = "1.0.2", features = ["spin_no_std"] }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx", tag="sgx_1.1.0"}
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx", tag="sgx_1.1.0" }

sgx_tstd   =  { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.0", optional = true }
#toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx", tag="sgx_1.1.0" }
toml =  { path = "../3rd/toml-rs-sgx" }
log          = { git = "https://github.com/mesalock-linux/log-sgx", tag="sgx_1.1.0"}
