[package]
name = "teaclave_utils"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "MesaTEE utilities."
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = ["sgx_tstd"]

[dependencies]
ring         = { git = "https://github.com/mesalock-linux/ring-sgx", branch = "mesalock_sgx-client-cert-verifier-patch" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0", optional = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", version = "1.1.0" }
toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx" }
