[package]
name = "teaclave_utils"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "MesaTEE utilities."
license = "Apache-2.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
ring         = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx"  }
sgx_types = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk" }
sgx_tstd  = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }
