[package]
name = "teaclave_utils"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "MesaTEE utilities."
license = "Apache-2.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
#ring         = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
ring         = { path = "../3rd/ring-sgx" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx", tag="sgx_1.1.0"}
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx", tag="sgx_1.1.0" }
#toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx", tag="sgx_1.1.0"}

toml =  { path = "../3rd/toml-rs-sgx" } 

sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.0" }
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.0", optional = true }
