[package]
name = "kmscli"
version = "0.1.0"
authors = ["duanbing <hibduan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.3.0" }
structopt = "0.2"
serde = "1.0.92"
serde_json = "1.0.39"
mesatee_sdk = { path = "../../mesatee_sdk" }
kms_proto = { path = "../../mesatee_services/kms/proto" }
