[package]
name = "kms"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Key management service."
license = "Apache-2.0"
build = "build.rs"
edition = "2018"

[features]
default = []

[dependencies]
sgx_types       = { version = "1.1.0" }
sgx_urts        = { version = "1.1.0" }

#sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0"}
#sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0"}

mesatee_core    = { path = "../../../mesatee_core" }
teaclave_binder  = { path = "../../../teaclave_binder" }

ctrlc           = { version = "3.1.2" }
log             = { version = "0.4.6" }
env_logger      = { version = "0.7.1" }
threadpool      = { version = "1.0" }

[build-dependencies]
kms_proto       = { path = "../proto" }
