[package]
name = "kms_enclave"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Key management service."
license = "Apache-2.0"
edition = "2018"

[lib]
name = "kms_enclave"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "mesatee_core/mesalock_sgx", "kms_proto/mesalock_sgx"]
cov = ["sgx_cov"]

[dependencies]
cfg-if          = { version = "0.1.9" }
lazy_static     = { version = "1.0.2", features = ["spin_no_std"] }
log             = { git = "https://github.com/mesalock-linux/log-sgx", tag="sgx_1.1.0"}
#env_logger      = { git = "https://github.com/mesalock-linux/env_logger-sgx", tag="sgx_1.1.0" }
env_logger = { path = "../../../3rd/env_logger-sgx" }
#uuid            = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"], tag="sgx_1.1.0"}
uuid         = { path = "../../../3rd/uuid-sgx",  features = ["v4"]}
#rand            = { git = "https://github.com/mesalock-linux/rand-sgx", tag="sgx_1.1.0" }
rand = { path = "../../../3rd/rand-sgx" }

kms_proto       = { path = "../proto", optional = true}
mesatee_core    = { path = "../../../mesatee_core" }
teaclave_config = { path = "../../../teaclave_config" }

sgx_cov   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0", optional = true}
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0", features = ["net", "backtrace"], optional = true}
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev="v1.1.0"}
