[package]
name = "kms_client"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "RPC client of KMS."
license = "Apache-2.0"
edition = "2018"

[dependencies]
cfg-if          = { version = "0.1.9" }
mesatee_core    = { path = "../../../mesatee_core" }
kms_proto       = { path = "../proto" }
